# Godot-SconsGUI

./: Cargo.toml
src/: app.rs  main.rs  options.rs  options.toml  states.rs  views.rs
src/views/: build.rs  clone.rs  setup.rs  start.rs
