[package]
name = "godot_scons_gui"
version = "0.1.0"
edition = "2021"

[profile.release] # https://github.com/johnthagen/min-sized-rust
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
eframe = { version = "0.28.1", default-features = false, features = ["glow", "default_fonts"] }
serde = { version = "1.0", features = ["derive"] }
indexmap = "2.5.0"
rfd = "0.14.1"
